[gd_scene load_steps=4 format=3 uid="uid://7s8sca4wdyp5"]

[ext_resource type="PackedScene" uid="uid://mil6hi586vw6" path="res://scenes/ui/item_slot.tscn" id="1_83doj"]
[ext_resource type="Script" uid="uid://2dn8sosg834y" path="res://scripts/ui/player_inventory.gd" id="1_rjkf6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_83doj"]

[node name="Player Inventory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_rjkf6")

[node name="MainInventoryMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -210.0
offset_right = 509.0
offset_bottom = 210.0
grow_vertical = 2
size_flags_horizontal = 0
theme_override_constants/margin_left = 35
theme_override_constants/margin_top = 35
theme_override_constants/margin_right = 35
theme_override_constants/margin_bottom = 35

[node name="MainInventoryContainer" type="HBoxContainer" parent="MainInventoryMargin"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Hotbar" type="PanelContainer" parent="MainInventoryMargin/MainInventoryContainer"]
layout_mode = 2

[node name="HotbarSlotContainer" type="VBoxContainer" parent="MainInventoryMargin/MainInventoryContainer/Hotbar"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HotbarSlot1" parent="MainInventoryMargin/MainInventoryContainer/Hotbar/HotbarSlotContainer" instance=ExtResource("1_83doj")]
unique_name_in_owner = true
layout_mode = 2

[node name="HotbarSlot2" parent="MainInventoryMargin/MainInventoryContainer/Hotbar/HotbarSlotContainer" instance=ExtResource("1_83doj")]
unique_name_in_owner = true
layout_mode = 2

[node name="HotbarSlot3" parent="MainInventoryMargin/MainInventoryContainer/Hotbar/HotbarSlotContainer" instance=ExtResource("1_83doj")]
unique_name_in_owner = true
layout_mode = 2

[node name="HotbarSlot4" parent="MainInventoryMargin/MainInventoryContainer/Hotbar/HotbarSlotContainer" instance=ExtResource("1_83doj")]
unique_name_in_owner = true
layout_mode = 2

[node name="HotbarSlot5" parent="MainInventoryMargin/MainInventoryContainer/Hotbar/HotbarSlotContainer" instance=ExtResource("1_83doj")]
unique_name_in_owner = true
layout_mode = 2

[node name="HotbarSlot6" parent="MainInventoryMargin/MainInventoryContainer/Hotbar/HotbarSlotContainer" instance=ExtResource("1_83doj")]
unique_name_in_owner = true
layout_mode = 2

[node name="HotbarSlot7" parent="MainInventoryMargin/MainInventoryContainer/Hotbar/HotbarSlotContainer" instance=ExtResource("1_83doj")]
unique_name_in_owner = true
layout_mode = 2

[node name="Inventory" type="PanelContainer" parent="MainInventoryMargin/MainInventoryContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MainInventoryMargin/MainInventoryContainer/Inventory"]
layout_mode = 2

[node name="InventorySlotContainer" type="GridContainer" parent="MainInventoryMargin/MainInventoryContainer/Inventory/HBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 4

[node name="InventorySlot1" parent="MainInventoryMargin/MainInventoryContainer/Inventory/HBoxContainer/InventorySlotContainer" instance=ExtResource("1_83doj")]
unique_name_in_owner = true
layout_mode = 2

[node name="InventorySlot2" parent="MainInventoryMargin/MainInventoryContainer/Inventory/HBoxContainer/InventorySlotContainer" instance=ExtResource("1_83doj")]
unique_name_in_owner = true
layout_mode = 2

[node name="InventorySlot3" parent="MainInventoryMargin/MainInventoryContainer/Inventory/HBoxContainer/InventorySlotContainer" instance=ExtResource("1_83doj")]
unique_name_in_owner = true
layout_mode = 2

[node name="InventorySlot4" parent="MainInventoryMargin/MainInventoryContainer/Inventory/HBoxContainer/InventorySlotContainer" instance=ExtResource("1_83doj")]
unique_name_in_owner = true
layout_mode = 2

[node name="InventorySlot5" parent="MainInventoryMargin/MainInventoryContainer/Inventory/HBoxContainer/InventorySlotContainer" instance=ExtResource("1_83doj")]
unique_name_in_owner = true
layout_mode = 2

[node name="InventorySlot6" parent="MainInventoryMargin/MainInventoryContainer/Inventory/HBoxContainer/InventorySlotContainer" instance=ExtResource("1_83doj")]
unique_name_in_owner = true
layout_mode = 2

[node name="InventorySlot7" parent="MainInventoryMargin/MainInventoryContainer/Inventory/HBoxContainer/InventorySlotContainer" instance=ExtResource("1_83doj")]
unique_name_in_owner = true
layout_mode = 2

[node name="InventorySlot8" parent="MainInventoryMargin/MainInventoryContainer/Inventory/HBoxContainer/InventorySlotContainer" instance=ExtResource("1_83doj")]
unique_name_in_owner = true
layout_mode = 2

[node name="InventorySlot9" parent="MainInventoryMargin/MainInventoryContainer/Inventory/HBoxContainer/InventorySlotContainer" instance=ExtResource("1_83doj")]
unique_name_in_owner = true
layout_mode = 2

[node name="InventorySlot10" parent="MainInventoryMargin/MainInventoryContainer/Inventory/HBoxContainer/InventorySlotContainer" instance=ExtResource("1_83doj")]
unique_name_in_owner = true
layout_mode = 2

[node name="InventorySlot11" parent="MainInventoryMargin/MainInventoryContainer/Inventory/HBoxContainer/InventorySlotContainer" instance=ExtResource("1_83doj")]
unique_name_in_owner = true
layout_mode = 2

[node name="InventorySlot12" parent="MainInventoryMargin/MainInventoryContainer/Inventory/HBoxContainer/InventorySlotContainer" instance=ExtResource("1_83doj")]
unique_name_in_owner = true
layout_mode = 2

[node name="InventorySlot13" parent="MainInventoryMargin/MainInventoryContainer/Inventory/HBoxContainer/InventorySlotContainer" instance=ExtResource("1_83doj")]
unique_name_in_owner = true
layout_mode = 2

[node name="InventorySlot14" parent="MainInventoryMargin/MainInventoryContainer/Inventory/HBoxContainer/InventorySlotContainer" instance=ExtResource("1_83doj")]
unique_name_in_owner = true
layout_mode = 2

[node name="InventorySlot15" parent="MainInventoryMargin/MainInventoryContainer/Inventory/HBoxContainer/InventorySlotContainer" instance=ExtResource("1_83doj")]
unique_name_in_owner = true
layout_mode = 2

[node name="InventorySlot16" parent="MainInventoryMargin/MainInventoryContainer/Inventory/HBoxContainer/InventorySlotContainer" instance=ExtResource("1_83doj")]
unique_name_in_owner = true
layout_mode = 2

[node name="InventorySlot17" parent="MainInventoryMargin/MainInventoryContainer/Inventory/HBoxContainer/InventorySlotContainer" instance=ExtResource("1_83doj")]
unique_name_in_owner = true
layout_mode = 2

[node name="InventorySlot18" parent="MainInventoryMargin/MainInventoryContainer/Inventory/HBoxContainer/InventorySlotContainer" instance=ExtResource("1_83doj")]
unique_name_in_owner = true
layout_mode = 2

[node name="InventorySlot19" parent="MainInventoryMargin/MainInventoryContainer/Inventory/HBoxContainer/InventorySlotContainer" instance=ExtResource("1_83doj")]
unique_name_in_owner = true
layout_mode = 2

[node name="InventorySlot20" parent="MainInventoryMargin/MainInventoryContainer/Inventory/HBoxContainer/InventorySlotContainer" instance=ExtResource("1_83doj")]
unique_name_in_owner = true
layout_mode = 2

[node name="InventorySlot21" parent="MainInventoryMargin/MainInventoryContainer/Inventory/HBoxContainer/InventorySlotContainer" instance=ExtResource("1_83doj")]
unique_name_in_owner = true
layout_mode = 2

[node name="InventorySlot22" parent="MainInventoryMargin/MainInventoryContainer/Inventory/HBoxContainer/InventorySlotContainer" instance=ExtResource("1_83doj")]
unique_name_in_owner = true
layout_mode = 2

[node name="InventorySlot23" parent="MainInventoryMargin/MainInventoryContainer/Inventory/HBoxContainer/InventorySlotContainer" instance=ExtResource("1_83doj")]
unique_name_in_owner = true
layout_mode = 2

[node name="InventorySlot24" parent="MainInventoryMargin/MainInventoryContainer/Inventory/HBoxContainer/InventorySlotContainer" instance=ExtResource("1_83doj")]
unique_name_in_owner = true
layout_mode = 2

[node name="InventorySlot25" parent="MainInventoryMargin/MainInventoryContainer/Inventory/HBoxContainer/InventorySlotContainer" instance=ExtResource("1_83doj")]
unique_name_in_owner = true
layout_mode = 2

[node name="InventorySlot26" parent="MainInventoryMargin/MainInventoryContainer/Inventory/HBoxContainer/InventorySlotContainer" instance=ExtResource("1_83doj")]
unique_name_in_owner = true
layout_mode = 2

[node name="InventorySlot27" parent="MainInventoryMargin/MainInventoryContainer/Inventory/HBoxContainer/InventorySlotContainer" instance=ExtResource("1_83doj")]
unique_name_in_owner = true
layout_mode = 2

[node name="InventorySlot28" parent="MainInventoryMargin/MainInventoryContainer/Inventory/HBoxContainer/InventorySlotContainer" instance=ExtResource("1_83doj")]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator" type="VSeparator" parent="MainInventoryMargin/MainInventoryContainer/Inventory/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxEmpty_83doj")

[node name="EquipmentSlotContainer" type="VBoxContainer" parent="MainInventoryMargin/MainInventoryContainer/Inventory/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="HeadSlot" parent="MainInventoryMargin/MainInventoryContainer/Inventory/HBoxContainer/EquipmentSlotContainer" instance=ExtResource("1_83doj")]
layout_mode = 2

[node name="TorsoSlot" parent="MainInventoryMargin/MainInventoryContainer/Inventory/HBoxContainer/EquipmentSlotContainer" instance=ExtResource("1_83doj")]
layout_mode = 2

[node name="ArmsSlot" parent="MainInventoryMargin/MainInventoryContainer/Inventory/HBoxContainer/EquipmentSlotContainer" instance=ExtResource("1_83doj")]
layout_mode = 2

[node name="HandsSlot" parent="MainInventoryMargin/MainInventoryContainer/Inventory/HBoxContainer/EquipmentSlotContainer" instance=ExtResource("1_83doj")]
layout_mode = 2

[node name="LegsSlot" parent="MainInventoryMargin/MainInventoryContainer/Inventory/HBoxContainer/EquipmentSlotContainer" instance=ExtResource("1_83doj")]
layout_mode = 2

[node name="FeetSlot" parent="MainInventoryMargin/MainInventoryContainer/Inventory/HBoxContainer/EquipmentSlotContainer" instance=ExtResource("1_83doj")]
layout_mode = 2

[node name="CraftingCenterContainer" type="CenterContainer" parent="MainInventoryMargin/MainInventoryContainer"]
layout_mode = 2

[node name="CraftingGridContainer" type="PanelContainer" parent="MainInventoryMargin/MainInventoryContainer/CraftingCenterContainer"]
layout_mode = 2

[node name="CraftingSlotContainer" type="GridContainer" parent="MainInventoryMargin/MainInventoryContainer/CraftingCenterContainer/CraftingGridContainer"]
layout_mode = 2
columns = 3

[node name="ItemSlot" parent="MainInventoryMargin/MainInventoryContainer/CraftingCenterContainer/CraftingGridContainer/CraftingSlotContainer" instance=ExtResource("1_83doj")]
layout_mode = 2

[node name="ItemSlot2" parent="MainInventoryMargin/MainInventoryContainer/CraftingCenterContainer/CraftingGridContainer/CraftingSlotContainer" instance=ExtResource("1_83doj")]
layout_mode = 2

[node name="ItemSlot3" parent="MainInventoryMargin/MainInventoryContainer/CraftingCenterContainer/CraftingGridContainer/CraftingSlotContainer" instance=ExtResource("1_83doj")]
layout_mode = 2

[node name="ItemSlot4" parent="MainInventoryMargin/MainInventoryContainer/CraftingCenterContainer/CraftingGridContainer/CraftingSlotContainer" instance=ExtResource("1_83doj")]
layout_mode = 2

[node name="ItemSlot5" parent="MainInventoryMargin/MainInventoryContainer/CraftingCenterContainer/CraftingGridContainer/CraftingSlotContainer" instance=ExtResource("1_83doj")]
layout_mode = 2

[node name="ItemSlot6" parent="MainInventoryMargin/MainInventoryContainer/CraftingCenterContainer/CraftingGridContainer/CraftingSlotContainer" instance=ExtResource("1_83doj")]
layout_mode = 2

[node name="ItemSlot7" parent="MainInventoryMargin/MainInventoryContainer/CraftingCenterContainer/CraftingGridContainer/CraftingSlotContainer" instance=ExtResource("1_83doj")]
layout_mode = 2

[node name="ItemSlot8" parent="MainInventoryMargin/MainInventoryContainer/CraftingCenterContainer/CraftingGridContainer/CraftingSlotContainer" instance=ExtResource("1_83doj")]
layout_mode = 2

[node name="ItemSlot9" parent="MainInventoryMargin/MainInventoryContainer/CraftingCenterContainer/CraftingGridContainer/CraftingSlotContainer" instance=ExtResource("1_83doj")]
layout_mode = 2

[node name="ConditionsMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -210.0
offset_bottom = 210.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 8
theme_override_constants/margin_left = 35
theme_override_constants/margin_top = 35
theme_override_constants/margin_right = 35
theme_override_constants/margin_bottom = 35

[node name="ConditionsContainer" type="PanelContainer" parent="ConditionsMargin"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ConditionsMargin/ConditionsContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="ConditionsMargin/ConditionsContainer/MarginContainer"]
layout_mode = 2

[node name="ConditionsTitle" type="Label" parent="ConditionsMargin/ConditionsContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Conditions:"
horizontal_alignment = 1

[node name="Health" type="Label" parent="ConditionsMargin/ConditionsContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Health:"

[node name="Mana" type="Label" parent="ConditionsMargin/ConditionsContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Mana:"

[node name="Weight" type="Label" parent="ConditionsMargin/ConditionsContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Weight:"

[node name="Energy" type="Label" parent="ConditionsMargin/ConditionsContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Energy:"
